--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "demo",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/dev/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "electron-dev": "node electron/config/electron-run-dev.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "electron": "^17.1.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
